[package]
name = "kromer2-api"
description = "A wrapper for the Kromer2 HTTP and WebSocket API"
authot = ["Laincy <laincy@proton.me>"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
hashbrown = { version = "0.15.4", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.19"
